<resources>
    <string name="app_name">CityApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lets_get_started">LETS GET STARTED</string>
    <string name="make_a_call">Make A Call</string>
    <string name="sit_back">Sit Back and Enjoy</string>
    <string name="find_location">Find Your Location</string>
    <string name="first_desc">Too fresh bro</string>
    <string name="second_desc">Yeah Boy, we good to go</string>
    <string name="you_can_search_any_place_or_with_in_the_specified_city_we_will_display_specific_or_all_related_shops_to_match_your_search">You can search any place or with-in the specified city.We will display specific or all related shops to match your search.</string>
    <string name="city_app">City App</string>
    <string name="we_run_it_good">WE RUN IT GOOD</string>
    <string name="skip">Skip</string>

    <!--    Dashboard-->
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="banks">Banks</string>
    <string name="airport">Airport</string>
    <string name="education">Education</string>

    <!--    Titles and description-->
    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_desc">All the Locations that are featured and have the top demand in town!</string>
    <string name="most_viewed">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search....</string>
    <string name="get_a_way">GET A WAY</string>
    <string name="add_missing_places">ADD MISSING PLACES</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="search">SEARCH</string>
    <string name="home">HOME</string>
    <string name="profile">Profile</string>
    <string name="logout">LOGOUT</string>
    <string name="login">LOGIN</string>
    <string name="restaurants_cap">RESTAURANTS</string>
    <string name="hotels_cap">HOTELS</string>
    <string name="education_cap">EDUCATION</string>
    <string name="share">Share</string>
    <string name="share_cap">SHARE</string>
    <string name="shop_cap">SHOP</string>
    <string name="car_rent">Car Rent</string>
    <string name="expand_all">Expand All</string>
    <string name="hospitals">Hospitals</string>
    <string name="shops">Shops</string>
    <string name="grow_your_business">Grow\nYour Business</string>
    <string name="sign_up">sign up</string>
    <string name="how_we_work">How we work?</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="create_account">Create\nAccount</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="otp_code">Co\nde</string>
    <string name="verification">Verification</string>
    <string name="enter_one_time_password_sent_on_23459685948">Enter One Time Password Sent On +23459685948</string>
    <string name="verify_code">Verify Code</string>
    <string name="create_account_btn">Create Account</string>
    <string name="forget_npassword">Forget\npassword</string>
    <string name="provide_your_account_s_email_for_which_you_want_to_reset_your_password">Provide Your Account\'s Email For Which You Want To Reset Your Password!</string>
    <string name="select_which_contact_detail_should_we_use_to_reset_your_password">Select which contact detail should we use to reset your password</string>
    <string name="via_sms">Via sms:</string>
    <string name="via_mail">Via mail:</string>
    <string name="new_ncredentials">New\nCredentials</string>
    <string name="your_identity_has_been_verified_set_your_new_password">Your identity has been verified! Set your new password</string>
    <string name="enter_the_code_sent_to_ur_number">Enter the code sent to ur number</string>
</resources>
