<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:transitionName="transition_login"
    android:padding="30dp"
    tools:context=".userBoard.LoginSignup.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/login"
            android:textColor="@android:color/black"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="80dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:hint="@string/enter_username"
                app:hintTextColor="@android:color/black"
                app:boxStrokeColor="@android:color/black"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/man"
                app:startIconTint="@android:color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli"
                    android:textColor="@android:color/black"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:hint="@string/enter_password"
                app:hintTextColor="@android:color/black"
                app:boxStrokeColor="@android:color/black"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/password"
                app:startIconTint="@android:color/black"
                app:endIconMode="password_toggle"
                app:endIconTint="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli"
                    android:textColor="@android:color/black"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:text="@string/remember_me"
                    android:buttonTint="@android:color/black"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:textColor="@android:color/black"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/forget_passwordBtn"
                    android:text="@string/forget_password"
                    android:transitionName="transition_forget_password"
                    android:onClick="ForgetPassword"
                    android:layout_alignParentRight="true"
                    android:background="@android:color/transparent"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:background="@android:color/black"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account_btn"
                android:onClick="createAccount"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:background="@android:color/transparent" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>